fix: setting overflow in mobile view (#150)

--- a/backend/static/styles/styles.scss
+++ b/backend/static/styles/styles.scss
@@ -401,7 +401,7 @@ footer {
     font-weight: bold;
   }
 
-  input[type=url] {
+  input {
     width: 100%;
   }
 
